--- a/public/index.html
+++ b/public/index.html
@@ -20,4 +20,22 @@
     <script src="privateaser.js"></script>
     <script src="index.js"></script>
   </body>
+  <style>
+	body {
+	  background-color: lightblue;
+	}
+
+	h1 {
+	  color: white;
+	  text-align: right;
+	  font-size: 80px
+	}
+
+	p {
+	  font-family: verdana;
+	  font-size: 40px;
+	  text-align: center
+	  
+	}
+</style>
 </html>
