--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,10 @@
 	body {
 	  background-color: lightblue;
 	}
-
-	h1 {
-	  color: white;
-	  text-align: right;
-	  font-size: 80px
+	
+	button{
+	color: orange;
 	}
-
-	p {
-	  font-family: verdana;
-	  font-size: 40px;
-	  text-align: center
-	  
-	}
+	
 </style>
 </html>
