--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,13 @@
   </body>
   <style>
 	body {
-	  background-color: lightblue;
+	  background-color: yellow;
 	}
 	
 	button{
-	color: orange;
+	background-color: orange
+	color: green;
+	size: 80px
 	}
 	
 </style>
