--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
 	}
 	
 	button{
-	background-color: orange
+	background-color: orange;
 	color: green;
-	size: 80px
+	size: 80px;
 	}
 	
 </style>
