--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,12 @@
   </body>
   <style>
 	body {
-	  background-color: yellow;
+	  background-color: light-red;
 	}
 	
 	button{
-	background-color: orange;
-	color: green;
-	size: 80px;
+	background-color: blue;
+	button-size : 80px;
 	}
 	
 </style>
