--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,12 @@
   </body>
   <style>
 	body {
-	  background-color: light-red;
+	  background-color: lightpink ;
 	}
 	
 	button{
 	background-color: blue;
-	button-size : 80px;
+	
 	}
 	
 </style>
