--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>CSS/HTML Workshop with Privateaser</title>
   </head>
   <body>
+	<title>Privateaser</title>
     <div id="bar">
       <input class="js-name" type="text" placeholder="Bar name"/>
       <input class="js-price-by-hour" type="number" placeholder="Price by hour"/>
