--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>CSS/HTML Workshop with Privateaser</title>
   </head>
   <body>
-	<title>Privateaser</title>
+	<h1>Privateaser</h1>
 	
     <div id="bar">
       <input class="js-name" type="text" placeholder="Bar name"/>
