--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,11 @@
 	body {
 	  background-color: lightpink ;
 	}
-	
+	h1 {
+		text-align: center;
+		color: yellow;
+		font-size: 60px;
+	}
 	button{
 	background-color: blue;
 	
