--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,17 @@
   </body>
   <style>
 	body {
-	  background-color: lightpink ;
+		background-color: lightpink ;
 	}
+	div	{
+		margin-left:40px;
 	h1 {
 		text-align: center;
 		color: yellow;
 		font-size: 60px;
 	}
 	button{
-	background-color: blue;
+		background-color: blue;
 	
 	}
 	
