--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,10 @@
 		font-size: 60px;
 	}
 	button{
+		border:none;
 		background-color: blue;
-	
+		font-size: 30px;
+		margin-left:100px;
 	}
 	
 </style>
