--- a/public/index.html
+++ b/public/index.html
@@ -26,16 +26,20 @@
 	body {
 		background-color: lightpink ;
 	}
+	
 	div	{
 		margin-left:40px;
+	}
+	
 	h1 {
 		text-align: center;
 		color: yellow;
 		font-size: 60px;
 	}
+	
 	button{
 		border-radius: 20px;
-		background-color: blue;
+		background-color: lightblue;
 		font-size: 30px;
 		margin-left: 60px;
 	}
