--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,16 @@
 	
 	button{
 		border-radius: 20px;
+		border: 6px lightblue;
 		background-color: lightblue;
-		font-size: 30px;
-		margin-left: 60px;
+		font-size: 50px;
+		margin-left: 100px;
+		
+	}
+	
+	button:hover {
+		background-color: lightbluehtblue;
+		color: white;
 	}
 	
 </style>
