--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 	
 	button{
 		border-radius: 20px;
-		border: 6px lightblue;
+		border: 6px solid lightblue;
 		font-size: 50px;
 		margin-left: 100px;
 		
