--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
 	}
 	
 	div	{
-		margin-left:40px;
+		margin-left:100px;
+		size: 100px
 	}
 	
 	h1 {
@@ -41,7 +42,7 @@
 		border-radius: 20px;
 		border: 2px solid lightblue;
 		font-size: 50px;
-		margin-left: 180px;
+		margin-left: 300px;
 		
 	}
 	
