--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 	}
 	
 	button{
-		border-radius: 20px;
+		color: lightblue;
 		border: 2px solid lightblue;
 		font-size: 50px;
 		margin-left: 300px;
