--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,9 @@
 		background-color: lightpink ;
 	}
 	
-	div	{
-		horizontal-align: middle;
-		
-		size: 100px
-	}
+	#bar {width: 0 auto;}
+	
+	
 	
 	h1 {
 		text-align: center;
