--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,11 @@
 	}
 	
 	div {
-		margin: 0 auto;}
+		margin-bottom:auto;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: auto;
+	}
 	
 	
 	
