--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <title>CSS/HTML Workshop with Privateaser</title>
   </head>
   <body>
+  
+	<div id = "picture"></div>
+	
+  
 	<h1>Privateaser</h1>
 	
     <div id="bar">
@@ -25,6 +29,14 @@
   <style>
 	body {
 		background-color: lightpink ;
+	}
+	
+	div#picture {
+	  background-image: url(Logo_privateaser.png);
+	  background-repeat: no-repeat;
+	  width: 80px;
+	  height: 103px;
+	  padding: 0;
 	}
 	
 	div {
