--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,11 @@
       <input class="js-name" type="text" placeholder="Booker name"/>
       <input class="js-time" type="number" placeholder="Time in h"/>
       <input class="js-persons" type="number" placeholder="Persons"/>
-      <input class="js-option" type="checkbox" placeholder="Deductible option"/>
     </div>
+	
+	<div id="checkbox">
+		<input class="js-option" type="checkbox" placeholder="Deductible option" label = "Deductible Option"/>
+	</div>
     <button id="compute">Compute</button>
     <div id="actors"></div>
     <script src="privateaser.js"></script>
